--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -2974,7 +2974,7 @@ div.jp-audio {
 /* line 2418, ../sass/style.scss */
 .scrollingFilter {
   position: fixed !important;
-  top: 0;
+  top: 25px;
   width: 100%;
   z-index: 1400 !important;
 }
