--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2417,7 +2417,7 @@ div.jp-audio{
 
 .scrollingFilter {
     position: fixed !important;
-    top: 0;
+    top: 25px;
     width: 100%;
     z-index: 1400 !important;
 }
