--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -2972,5 +2972,7 @@ div.jp-audio {
   z-index: 140;
   top: 25px;
   width: 100%;
+  min-width: 100% !important;
+  max-width: 100% !important;
   z-index: 1400 !important;
 }
