--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -2970,14 +2970,15 @@ div.jp-audio {
   position: fixed !important;
   position: relative;
   z-index: 140;
-  top: 25px;
+  top: 0;
+  margin: 0;
   width: 100%;
   min-width: 100% !important;
   max-width: 100% !important;
   z-index: 1400 !important;
 }
 
-/* line 2427, ../sass/style.scss */
+/* line 2428, ../sass/style.scss */
 .scrollingFilter {
   background: url("../images/shadow_local_bar-1.png") repeat-x scroll center bottom rgba(0, 0, 0, 0);
   position: fixed !important;
