--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2418,7 +2418,8 @@ div.jp-audio{
     position: fixed !important;
     position: relative;
     z-index: 140;
-    top: 25px;
+    top: 0;
+    margin: 0;
     width: 100%;
     min-width: 100%!important;
     max-width: 100%!important;
