--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2434,6 +2434,7 @@ div.jp-audio{
     // width: 100%;
     // min-width: 100%!important;
     // max-width: 100%!important;
+    margin: auto;
     z-index: 1400 !important;
 }
 
