--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2431,9 +2431,9 @@ div.jp-audio{
     position: relative;
     z-index: 140;
     top: 46px;
-    // width: 100%;
-    // min-width: 100%!important;
-    // max-width: 100%!important;
+    width: 100%;
+    min-width: 100%!important;
+    max-width: 100%!important;
     margin: auto;
     z-index: 1400 !important;
 }
