--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -2991,3 +2991,12 @@ div.jp-audio {
   margin: auto;
   z-index: 1400 !important;
 }
+
+/* line 2440, ../sass/style.scss */
+#teachingsBarInnerWrapper {
+  max-width: 1580px;
+  min-width: 940px;
+  padding-bottom: 1px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
