--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2437,7 +2437,13 @@ div.jp-audio{
     margin: auto;
     z-index: 1400 !important;
 }
-
+#teachingsBarInnerWrapper{
+    max-width: 1580px;
+    min-width: 940px;
+    padding-bottom: 1px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
 
 
 
