--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -2996,7 +2996,5 @@ div.jp-audio {
 .teachingsBarInnerWrapper {
   max-width: 1580px;
   min-width: 940px;
-  padding-bottom: 1px;
-  padding-left: 20px;
-  padding-right: 20px;
+  margin: auto;
 }
