--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2440,9 +2440,7 @@ div.jp-audio{
 .teachingsBarInnerWrapper{
     max-width: 1580px;
     min-width: 940px;
-    padding-bottom: 1px;
-  padding-left: 20px;
-  padding-right: 20px;
+    margin: auto;
 }
 
 
