--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -928,8 +928,7 @@ ul.masonry {
   margin: auto;
   max-width: 1580px;
   min-width: 940px;
-  padding: 20px;
-  padding-bottom: 16px;
+  padding: 20px 0 16px;
   height: 20px;
   margin-top: 24px;
 }
