--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -747,8 +747,8 @@ ul.masonry{
     margin: auto;
     max-width: 1580px;
     min-width: 940px;
-    padding: 20px;
-    padding-bottom:16px;
+    padding: 20px 0 16px;
+    // padding-bottom:16px;
     // background-color:#f5f5f5;
     height:20px;
     margin-top: 24px;
