--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -773,8 +773,8 @@ ul.masonry{
     max-width: 1580px;
     min-width: 940px;
     padding-bottom: 1px;
-    padding-left:20px;
-    padding-right:20px;
+    // padding-left:20px;
+    // padding-right:20px;
     // border-bottom: 1px solid #CCCCCC;
 }
 #teachersDDtext {
