--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -763,6 +763,11 @@ ul.masonry{
     text-decoration: none;
     text-transform: uppercase;
 }
+@media screen and (min-width: 940px) {
+    #teachingsControlSection,#teachingsSectionHeaderBar{
+      padding-left:20px;
+    }
+  }
 // #teachingsSectionHeaderBar {
 //     float: right;
 //     margin-top: 2px;
