--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -944,6 +944,12 @@ ul.masonry {
   text-transform: uppercase;
 }
 
+@media screen and (max-width: 980px) {
+  /* line 767, ../sass/style.scss */
+  #teachingsControlSection, #teachingsSectionHeaderBar {
+    padding-left: 20px;
+  }
+}
 /* line 775, ../sass/style.scss */
 #teachingsSectionHeaderBar {
   height: 65px;
