--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -763,7 +763,7 @@ ul.masonry{
     text-decoration: none;
     text-transform: uppercase;
 }
-@media screen and (max-width: 980px) {
+@media screen and (min-width: 980px) {
     #teachingsControlSection,#teachingsSectionHeaderBar{
       padding-left:20px;
     }
