--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -763,17 +763,18 @@ ul.masonry{
     text-decoration: none;
     text-transform: uppercase;
 }
-@media screen and (max-width: 940px) {
-    #teachingsControlSection,#teachingsSectionHeaderBar{
-      padding-left:20px;
-    }
-  }
 
-@media screen and (min-width: 1580px) {
+@media only screen and (max-width: 1580px) {
     #teachingsControlSection,#teachingsSectionHeaderBar{
       padding-left:0px;
     }
-  }
+}
+@media only screen and (min-width: 940px) {
+     #teachingsControlSection,#teachingsSectionHeaderBar{
+      padding-left:20px;
+    }
+}
+
 // #teachingsSectionHeaderBar {
 //     float: right;
 //     margin-top: 2px;
