--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -764,7 +764,7 @@ ul.masonry{
     text-transform: uppercase;
 }
 
-@media only screen and (min-width: 1580px) {
+@media only screen and (max-width: 1580px) {
     #teachingsControlSection,#teachingsSectionHeaderBar{
       padding-left:0px;
     }
