--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -764,11 +764,11 @@ ul.masonry{
     text-transform: uppercase;
 }
 
-@media only screen and (max-width: 1580px) {
-    #teachingsControlSection,#teachingsSectionHeaderBar{
-      padding-left:0px;
-    }
-}
+// @media only screen and (max-width: 1580px) {
+//     #teachingsControlSection,#teachingsSectionHeaderBar{
+//       padding-left:0px;
+//     }
+// }
 @media only screen and (max-width: 980px) {
      #teachingsControlSection,#teachingsSectionHeaderBar{
       padding-left:20px;
