--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -771,7 +771,7 @@ ul.masonry{
 // }
 
 @media (max-width: 980px) {
-  #teachingsControlSection,#teachingsSectionHeaderBar{
+  #teachingsControlSectionInnerWrapper,#teachingsSectionHeaderBar{
       padding-left:20px;
     }
 }
