--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -946,7 +946,7 @@ ul.masonry {
 
 @media (max-width: 980px) {
   /* line 774, ../sass/style.scss */
-  #teachingsControlSection, #teachingsSectionHeaderBar {
+  #teachingsControlSectionInnerWrapper, #teachingsSectionHeaderBar {
     padding-left: 20px;
   }
 }
