--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -770,11 +770,11 @@ ul.masonry{
 //     }
 // }
 
-@media (max-width: 960px) {
-  #teachingsControlSectionInnerWrapper,#teachingsSectionHeaderBar{
-      padding-left:20px;
-    }
-}
+// @media (max-width: 960px) {
+//   #teachingsControlSectionInnerWrapper,#teachingsSectionHeaderBar{
+//       padding-left:20px;
+//     }
+// }
 
 
 // #teachingsSectionHeaderBar {
