--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -791,6 +791,9 @@ ul.masonry{
     // padding-right:20px;
     // border-bottom: 1px solid #CCCCCC;
 }
+#teachingsBarInnerWrapper{
+  padding-bottom:3px;
+}
 #teachersDDtext {
     margin-left: 0 !important;
 }
