--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -2981,7 +2981,7 @@ div.jp-audio {
 }
 
 /* line 2421, ../sass/style.scss */
-.scrollingFilter {
+.scrollingFilter, .scrollingTermDesc {
   background: url("../images/shadow_local_bar-1.png") repeat-x scroll center bottom rgba(0, 0, 0, 0);
   position: fixed !important;
   z-index: 140;
@@ -2994,6 +2994,11 @@ div.jp-audio {
 }
 
 /* line 2432, ../sass/style.scss */
+.scrollingTermDesc {
+  top: 35px;
+}
+
+/* line 2435, ../sass/style.scss */
 .teachingsBarInnerWrapper {
   max-width: 1580px;
   min-width: 940px;
