--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2418,7 +2418,7 @@ div.jp-audio{
     max-width: 100%!important;
     z-index: 1400 !important;
 }
-.scrollingFilter {
+.scrollingFilter,.scrollingTermDesc {
   background: url("../images/shadow_local_bar-1.png") repeat-x scroll center bottom rgba(0, 0, 0, 0);
     position: fixed !important;
     z-index: 140;
@@ -2428,6 +2428,9 @@ div.jp-audio{
     max-width: 100%!important;
     margin: auto;
     z-index: 1400 !important;
+}
+.scrollingTermDesc{
+    top: 35px;
 }
 .teachingsBarInnerWrapper{
     max-width: 1580px;
