--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2418,7 +2418,7 @@ div.jp-audio{
     max-width: 100%!important;
     z-index: 1400 !important;
 }
-.scrollingFilter,.scrollingTermDesc {
+.scrollingFilter,.scrollingTermDesc,.scrollingView-filters {
   background: url("../images/shadow_local_bar-1.png") repeat-x scroll center bottom rgba(0, 0, 0, 0);
     position: fixed !important;
     z-index: 140;
@@ -2431,6 +2431,7 @@ div.jp-audio{
 }
 .scrollingTermDesc{
     top: 35px;
+    height: 36px;
 }
 .teachingsBarInnerWrapper{
     max-width: 1580px;
