--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2433,6 +2433,9 @@ div.jp-audio{
     top: 35px;
     height: 36px;
 }
+.scrollingView-filters{
+  top: 50px;
+}
 .teachingsBarInnerWrapper{
     max-width: 1580px;
     min-width: 940px;
