--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2435,6 +2435,7 @@ div.jp-audio{
 }
 .scrollingView-filters{
   top: 50px;
+  border-bottom: none !important;
 }
 .teachingsBarInnerWrapper{
     max-width: 1580px;
