--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2430,12 +2430,15 @@ div.jp-audio{
     z-index: 1400 !important;
 }
 .scrollingTermDesc{
-    top: 35px;
+    top: 75px;
     height: 36px;
 }
 .scrollingView-filters{
-  top: 50px;
+  top: 106px;
   border-bottom: none !important;
+}
+#page-title.scrollingTitle{
+  top: 46px;
 }
 .teachingsBarInnerWrapper{
     max-width: 1580px;
