--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2429,17 +2429,17 @@ div.jp-audio{
     margin: auto;
     z-index: 1400 !important;
 }
-.scrollingTermDesc{
-    top: 75px;
-    height: 36px;
-}
-.scrollingView-filters{
-  top: 106px;
-  border-bottom: none !important;
-}
-#page-title.scrollingTitle{
-  top: 46px;
-}
+// .scrollingTermDesc{
+//     top: 75px;
+//     height: 36px;
+// }
+// .scrollingView-filters{
+//   top: 106px;
+//   border-bottom: none !important;
+// }
+// #page-title.scrollingTitle{
+//   top: 46px;
+// }
 .teachingsBarInnerWrapper{
     max-width: 1580px;
     min-width: 940px;
