--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2417,6 +2417,9 @@ div.jp-audio{
     margin: auto;
     z-index: 1400 !important;
 }
+.scrollingFilter{
+  padding-bottom:10px!important;
+}
 // .scrollingTermDesc{
 //     top: 75px;
 //     height: 36px;
